--- a/AlphaSymbolic/AlphaSymbolic_Unified_Colab.ipynb
+++ b/AlphaSymbolic/AlphaSymbolic_Unified_Colab.ipynb
@@ -627,6 +627,28 @@
         "%cd AlphaSymbolic\n",
         "!python app.py\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Backup Learned Formulas to Drive (Run manually or keep active)\n",
+        "import shutil\n",
+        "import time\n",
+        "\n",
+        "try:\n",
+        "    src = 'learned_formulas.csv'\n",
+        "    dst = '/content/drive/MyDrive/AlphaSymbolic_Models/learned_formulas.csv'\n",
+        "    if os.path.exists(src):\n",
+        "        shutil.copy(src, dst)\n",
+        "        print(f\"\u2705 Backup successful: {dst}\")\n",
+        "    else:\n",
+        "        print(\"\u26a0\ufe0f No learned formulas found yet.\")\n",
+        "except Exception as e:\n",
+        "    print(f\"\u274c Backup failed: {e}\")\n"
+      ]
     }
   ],
   "metadata": {
